<resources>
    <string name="app_name">Ex06</string>
    <string name="top_score_0">Top Score: 0</string>
    <string name="level_1">Level: 1</string>
    <string name="level_text">Level: %1$d</string>
    <string name="top_score_text">Top Score: %1$s</string>
    <string name="new_game">New Game</string>
    <string name="free_play">Free Play</string>
    <string name="about">About</string>
    <string name="game_conditions">Game Conditions: the interface consists of four buttons, each with a unique sound. At the start, the app plays a sequence of sounds with a 500ms delay. The user must repeat the sequence by pressing the buttons in the same order. Each level adds one new sound to the sequence. If the user repeats the sequence correctly, they proceed to the next level.</string>
    <string name="author">Author: goghorhi</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="delay_between_sounds_ms">Delay between sounds (ms)</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="button_highlight">Button highlight</string>
    <string name="sound_theme">Sound theme</string>
    <string-array name="spinner_choices">
        <item>Animals</item>
        <item>Fun</item>
        <item>Human</item>
    </string-array>
</resources>