<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Bindings go here -->
    </data>

    <android.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/recordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/top_score_text"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/gameConditionsTextView"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/gameConditionsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/game_conditions"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/recordTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/authorTextView"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/gameConditionsTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </android.widget.ScrollView>

</layout>
